# Learning-Rust

./: README.md  Somewhat List.md
Stage 1/: readme.md
Stage 2/: readme.md
Stage 2/stuff/build_system/: Cargo.toml  rust-project.json
Stage 2/stuff/build_system/greet_derive/: Cargo.toml
Stage 2/stuff/build_system/greet_derive/src/: lib.rs
Stage 2/stuff/build_system/src/: greet.rs  main.rs  rust_analyser_project_gen.rs  test.rs
Stage 2/stuff/exploring_slices/: Cargo.toml
Stage 2/stuff/exploring_slices/src/: main.rs
Stage 2/stuff/messing_up_with_enums/: Cargo.toml
Stage 2/stuff/messing_up_with_enums/src/: main.rs
Stage 2/stuff/starting_mess/: Cargo.toml
Stage 2/stuff/starting_mess/src/: main.rs
Stage 3/: questline.md  readme.md
Stage 3/operating_system/: readme.md
Stage 3/operating_system/quests/: port-doom.md
Stage 3/todo_list/: Cargo.toml  readme.md
Stage 3/todo_list/quests/: add_to_your_toolkit.md  marshalling.md
Stage 3/todo_list/src/: lib.rs  main.rs
