[package]
name = "tdl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
crossterm = "0.26.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
tui = "0.19.0"
regex = "1"
