[package]
name = "build_system"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
glob = "0.3.0"
greet_derive = {path = "greet_derive" }
