[package]
name = "greet_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "0.11.11"
quote = "0.3.15"
geolocation = "0.2.1"
json = "0.12.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[lib]
proc-macro = true
